--- a/teams/lynx.json
+++ b/teams/lynx.json
@@ -23,6 +23,17 @@
     "darkNav": "#0C233F",
     "darkSheet": "#112B4A",
     "darkSurface": "#0C233F",
+    "displayLetterSpacing": "-0.03em",
+    "displaySize100": "20px",
+    "displaySize200": "24px",
+    "displaySize300": "28px",
+    "displaySize400": "36px",
+    "displaySize500": "44px",
+    "displaySize600": "52px",
+    "displaySize700": "60px",
+    "displaySize800": "68px",
+    "displaySize900": "76px",
+    "displayWeight": "700",
     "interactive": "#266092",
     "inverted": "#79BC43",
     "light": "#79BC43",
