--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "framework": null,
+  "buildCommand": "npm run build:site",
+  "outputDirectory": "site-dist",
   "rewrites": [
     { "source": "/((?!.*\\..*$).*)", "destination": "/index.html" }
   ],
